# skskills

./: .gitignore  README.md  SKILL.md  catalog.yaml  package.json  pyproject.toml  skill.yaml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md
examples/pgp-identity/: skill.yaml
examples/pgp-identity/hooks/: on_boot.py  on_memory_stored.py
examples/pgp-identity/knowledge/: SKILL.md
examples/pgp-identity/tools/: pgp_tools.py
examples/skcapstone-agent/: skill.yaml
examples/skcapstone-agent/knowledge/: SKILL.md
examples/skseed/: README.md
examples/syncthing-setup/: skill.yaml
examples/syncthing-setup/hooks/: on_boot.py
examples/syncthing-setup/knowledge/: SKILL.md  troubleshooting.md
examples/syncthing-setup/tools/: syncthing_tools.py
skills/chat/: SKILL.md  skill.yaml
skills/unhinged-mode/: SKILL.md  package.json  skill.yaml
skills/unhinged-mode/lib/obliteratus/: README.md  pyproject.toml
skills/unhinged-mode/lib/obliteratus/obliteratus/: abliterate.py  cli.py  config.py  prompts.py
skills/unhinged-mode/lib/obliteratus/obliteratus/models/: loader.py
skills/unhinged-mode/openclaw-plugin/src/: index.js  openclaw.plugin.json
skills/unhinged-mode/scripts/: get-liberation-prompt.sh  list-prompts.sh  obliterate-model.sh  proxy-integration.mjs  unhinged.sh
skills/who/: SKILL.md  skill.yaml
src/skskills/: __init__.py  aggregator.py  catalog.py  catalog.yaml  cli.py  installer.py  loader.py  models.py  pip_bridge.py  registry.py  remote.py
tests/: test_aggregator.py  test_cli_enhanced.py  test_isolation.py  test_loader.py  test_models.py  test_registry.py  test_remote.py
